--- a/templates/create_account.html
+++ b/templates/create_account.html
@@ -1,6 +1,19 @@
 {% extends "base.html" %}
 
 {% block content %}
+<style>
+  #sidebar-wrapper {
+    display: none;      
+  }
+  
+  .sidebar-title{
+    display: none; 
+  }
+  
+  #sidebar-wrapper .list-group {
+    display: none; 
+  }
+  </style>
 <link rel="stylesheet" href="{{url_for('static', filename='css/style.css')}}">
 
     <br/>
