--- a/templates/index.html
+++ b/templates/index.html
@@ -2,10 +2,19 @@
 
 {% block content %}
 <style>
-  .navbar {
-    display: none;
-  }
+#sidebar-wrapper {
+  display: none;      
+}
+
+.sidebar-title{
+  display: none; 
+}
+
+#sidebar-wrapper .list-group {
+  display: none; 
+}
 </style>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
 
     <br/>
