--- a/templates/test-home.html
+++ b/templates/test-home.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+
 
 {% block content %}
 
@@ -10,7 +10,6 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
         crossorigin="anonymous">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
         crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
@@ -21,18 +20,17 @@
         <script type=text/javascript src="{{
             url_for('static', filename='css/app.js') }}"></script>
 
-    <title>Homepage</title>
+    <title>Dash-Board</title>
     	<div class="log-box">
-            <main role="main" class="inner cover">
-                <form action="/home" method="post" enctype="multipart/form-data" class="form-control">
-                    <input type="file" name="file" class="random">
-                    <br>
-                    <br>
-                    <button id="hideload" class="w3-button w3-white w3-border w3-round-large" type="submit"><i class="fa fa-upload" aria-hidden="true"></i> Upload</button>
-                </form>
-            </main>
-    	</div>
-        <!-- <div>
-            <h1 id="success" style="color: white;"></h1>
-        </div> -->
+		<main role="main" class="inner cover">
+        	<form action="/home" method="post" enctype="multipart/form-data" class="form-control">
+                <input type="file" name="file" class="random">
+                <br>
+                <br>
+                <button class="btn-primary" type="submit">Upload</button>
+            </form>
+		</main>
+
+		    <div id="success" style="color: white;"></div>
+
 {% endblock %}
