--- a/templates/upload.html
+++ b/templates/upload.html
@@ -1,23 +1,101 @@
 {% extends "base.html" %}
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
+
+
+    {% block content %}
     <title>Road Pulse Detection</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
         crossorigin="anonymous">
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
         crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
         crossorigin="anonymous"></script>
-        <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
+    <link rel="stylesheet" href="{{url_for('static', filename='style/css/dashboard.css')}}">
 
-    {% block content %}
-    <center>
+    <style>
+    #vidhead{
+        background-image: url(static/style/newback.jpg);
+        /* background-color:  #5e72e4; */
+        background-position: center;
+    }
+
+    #tablehead{
+        background-color: rgb(64, 67, 68);
+        color: white;
+    }
+
+    #demobox {
+        padding: 10px ;
+        border: 1px solid green ;
+            }
+    
+    table, td, th {
+      border: 1px solid black;
+      font-size:medium;
+      font-family: Verdana, Geneva, Tahoma, sans-serif;
+    }
+    
+    table {
+      width: 100%;
+      background-color: white;
+      color: rgb(10, 9, 9);
+      border-collapse: collapse;
+    }
+    </style>
+    <body>
     <div>
-        <video width="320" height="240" src="{{l}}" type="video/mp4" controls autoplay></video>
+        <div id="vidhead">
+        <center>
+        <div style="align-items: center; padding-top: 6%;">
+            <h1 style="font-family: 'Courier New', Courier, monospace; color: white; background-color: black;">Clipped Anomaly Video ::</h1>
+            <br>
+            <video width="520" height="440" src="{{l[0]}}" type="video/mp4" controls autoplay></video>
+        </div>
+        <br>
+        <div>
+            <button class="w3-button w3-white w3-border w3-round-large" type="button" onclick="history.go(-1)">Go Back</button>
+        </div>
+        <br>
+        </center>
+        </div>
+        <div id="tablehead">
+        <center><h1 style="font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;"><u>Clipped Anomaly Frame</u></h1>
+        <br>
+        <h3 style="font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif; font-size: medium;">Showing events from Firebase Storage</h3></center>
+        <center><hr style="width:50% "></center>
+        <br>
+        </div>
+
+        
+        <table class="table table-striped table-dark">
+            <thead>
+            <tr>
+            <th scope="col">Name</th>
+            <th scope="col">Type</th>
+            <th scope="col">Timestamp</th>
+            <th scope="col">Anomaly Image Url</th>
+            <th scope="col">Event Image</th>
+            </tr>
+            </thead>
+            <tbody>
+            {% for dict in l[1] %}
+                <tr>
+                <td style="text-align: center; padding-top: 5em;">{{dict.Name}}</td>
+                <td style="text-align: center; padding-top: 5em;">{{dict.Type}}</td>
+                <td style="text-align: center; padding-top: 5em;">{{dict.Timestamp}}</td>
+                <td style="text-align: center; padding-top: 5em;"><p><a href="{{dict.Image_Url}}">Download Anomaly Frame</a></p></td>
+                <td><center><img src="{{dict.Image_Url}}" alt="Crash" width="250" height="150">
+                    <figcaption><br><b>Description:</b>The above frame show's anomalus event frame with probability</figcaption></center>
+                </td>
+                </tr>
+            {% endfor %}
+            </tbody>    
+        </table>
+        <br>
     </div>
-    <div>
-        <button class="btn-primary" type="button" onclick="history.go(-1)">Go Back</button>
-    </div>
-</center>
+</body>
 {% endblock %}
